--- a/.github/workflows/node.jsReact.yml
+++ b/.github/workflows/node.jsReact.yml
@@ -3,15 +3,12 @@ name: Deploy
 on:
   push:
     branches:
-      - main
+      - vite
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./client
 
     steps:
       - name: Checkout repo
